# cat_feeder_shii

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs  user_routes.rs
backend/src/model/: cat.rs  mod.rs  user.rs
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  app.rs  main.rs  styles.rs  tauri_api.rs
frontend/src/components/: bottom_navigation.rs
frontend/src/pages/: calendar.rs  feed.rs  home.rs  mod.rs  notifications.rs  settings.rs  setup.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ble.rs  commands.rs  lib.rs  main.rs  server.rs
