[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
js-sys = "=0.3.91"
leptos = { version = "0.8.17", features = ["csr"] }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
web-sys = { version = "=0.3.91", features = ["File", "FileList", "FileReader", "HtmlInputElement", "Window"] }
