[package]
name = "potugy_01-tauri"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
build = "build.rs"

[lib]
name = "potugy_01_lib"
path = "src/lib.rs"

[[bin]]
name = "potugy_01"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.11.0"
actix-cors = "0.7.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
anyhow = "1.0"
btleplug = { version = "0.12.0", features = ["serde"] }
wasm-bindgen = "0.2"
leptos = { version = "0.8.17", features = ["csr"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
common = { path = "../common" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
lto = true
opt-level = "z"
